# anytype-friend

./: .gitignore  Cargo.toml  build.rs
src/: client.rs  lib.rs  main.rs  object.rs  object_type.rs  prost_ext.rs  relation.rs  request.rs  space.rs  unique_key.rs
tests/: auth.rs  object.rs  object_type.rs  relation.rs  sync.rs  upsert_object_type.rs  upsert_relation.rs
tests/utils/: mod.rs
