[package]
name = "anytype_friend"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "sync"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["macros", "net"] }
